k8s-examples/viewspot-logrx/0-infra.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: viewspot
  name: viewspot
  annotations:
    services.k8s.aws/default-region: eu-north-1
