k8s-examples/viewspot-logrx/2-logrx-server.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: viewspot-logrx
  name: logrx-server
  namespace: viewspot
spec:
  selector:
    matchLabels:
      name: logrx-server
  serviceName: logrx-server
  replicas: 2
  minReadySeconds: 3
  template:
    metadata:
      labels:
        name: logrx-server
    spec:
      terminationGracePeriodSeconds: 3
      imagePullSecrets:
        - name: viewspot-artifactory-ro
      containers:
        - name: logrx-server
          image: smithmicro-viewspot-docker-release-local.jfrog.io/viewspot-logrx-server:6.0.0p1
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh" ]
          args: [ "-c", "gunicorn logrx:app" ]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 5m
              memory: 64Mi
          volumeMounts:
            - name: data
              mountPath: /data
            - name: shared-efs
              mountPath: /efs/logrx-data
      volumes:
        - name: shared-efs
          persistentVolumeClaim:
            claimName: logrx-efs-claim
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: gp2
        resources:
          requests:
            storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: viewspot-logrx
  name: logrx-server
  namespace: viewspot
spec:
  selector:
    name: logrx-server
  clusterIP: None
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: viewspot-logrx
  name: logrx-server
  namespace: viewspot
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - viewspot-logrx.mb-eks.smithmicro.io
      secretName: viewspot-logrx-tls-secret
  rules:
    - host: viewspot-logrx.mb-eks.smithmicro.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logrx-server
                port:
                  number: 80
